fix: overflow scroll to preview

--- a/src/components/template-modal/style.scss
+++ b/src/components/template-modal/style.scss
@@ -92,6 +92,7 @@
 		border-radius: 2px;
 		display: flex;
 		justify-content: center;
+		overflow: scroll;
 		position: relative;
 
 		.block-editor-block-preview {
